# Imposterbot.RS

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  license.md  privacy.md  terms-of-service.md
.cargo/: config.toml
.sqlx/: query-0935edd63872f4abd6fbb2d60203f8cc02f0750ff77098faef7918d03dca7668.json  query-1d96c5f7eea51c2703d23e8e786e37eb7889ec00bcdf80cd11260bfbd06c9f56.json  query-854417b31ccaf8fda88ff72d601b62e5c472b7a23bbafb90c3dcbbd41dff5570.json  query-8d764db1335897f26a02b84b5bf9d5afdce6f473f1e27f0d8713e66e9b65eac8.json  query-96d4df93039ad6d0275e38afe89d16071246c870459bd5d5d300ecd4349378e9.json  query-9da0ceca2ac5bed53d5345c23d995d4dfe9b14fd40ea0148b784ff4ab3ee2723.json  query-a3c7618c2c2611fa41d88fdd881c194506afaabf50b975768957e8a7df386eca.json  query-c8b6b7f826524939d89ed74a9badd975ad82fc869710f115e0f681cbdbe6389d.json  query-dbf5d951c9a7b69db8b1b6a6004ba0e8f814b3253762a38ee9246e1401282ed9.json  query-e25b0163234b27dda4a7271009bee48cafe9c16342d23ae894bf214350b5ec1e.json  query-e2b5f5ace6335f5940817ccd1fe0d21975a3691770ffeaba459f43a76185c687.json
media/opus/: mariah.opus
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_initial.rs  m20260115_073352_rich_welcome_channel_configuration.rs
migrations/: 20260106031613_initial.sql  20260109195508_addl-mc-server-info.sql
src/: client.rs  database.rs  lib.rs  logging.rs  main.rs  shutdown.rs
src/commands/: builtins.rs  coinflip.rs  mariah.rs  member_management.rs  minecraft.rs  roll.rs  voice.rs
src/commands/member_management/: channels.rs  mod.rs  notifications.rs  notifications_implementation.rs  roles.rs
src/entities/: mc_server.rs  member_notification_channel.rs  member_notification_message.rs  mod.rs  prelude.rs  welcome_channel.rs  welcome_roles.rs
src/events/: guild_member.rs  message.rs
src/infrastructure/: botdata.rs  colors.rs  environment.rs  event_handler.rs  events.rs  ids.rs  util.rs
src/queries/: add_member_role_on_join.sql  delete_mcserver.sql  delete_welcome_channel.sql  get_all_mcserver.sql  get_roles_in_guild.sql  insert_mcserver.sql  remove_member_role_on_join.sql  update_mcserver.sql
src/queries/mc/: get_all_mcserver_names.sql  get_mcserver.sql  insert_mcserver.sql  update_mcserver.sql
src/queries/member_management/: add_or_update_welcome_channel.sql  get_member_roles_on_join.sql  get_welcome_channel.sql
