[package]
name = "imposterbot"
version = "0.1.0"
edition = "2024"

[dependencies]
async-minecraft-ping = { git = "https://github.com/jsvana/async-minecraft-ping", branch = "master", features = [
    "srv",
] }
dotenvy = "0.15.7"
env_logger = { version = "0.11.8", features = ["kv"] }
log = "0.4.29"
once_cell = "1.21.3"
paste = "1.0.15"
poise = { version = "0.6.1", features = ["cache"] }
rand = "0.9.2"
regex = "1.12.2"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.49.0", features = ["full"] }
