[package]
name = "imposterbot"
version = "0.1.0"
edition = "2024"

[dependencies]
async-minecraft-ping = { git = "https://github.com/jsvana/async-minecraft-ping", branch = "master", features = [
    "srv",
] }
async-stream = "0.3.6"
dotenvy = "0.15.7"
env_logger = { version = "0.11.8", features = ["kv"] }
once_cell = "1.21.3"
paste = "1.0.15"
poise = { version = "0.6.1", features = ["cache"] }
rand = "0.9.2"
regex = "1.12.2"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
migration = { path = "./migration" }
sea-orm = { version = "1.1.19", features = ["macros"] }
