[package]
name = "imposterbot"
version = "0.1.0"
edition = "2024"

[features]
default = []
# Voice feature requires cmake, and a c compiler as a developer dependency and yt-dlp as a prod dependency.
voice = ["dep:songbird", "dep:symphonia"]
youtube = ["voice"]

[dependencies]
async-minecraft-ping = { git = "https://github.com/jsvana/async-minecraft-ping", branch = "master", features = [
    "srv",
] }
async-stream = "0.3.6"
dotenvy = "0.15.7"
env_logger = { version = "0.11.8", features = ["kv"] }
once_cell = "1.21.3"
paste = "1.0.15"
poise = { version = "0.6.1", features = ["cache"] }
rand = "0.9.2"
regex = "1.12.2"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
migration = { path = "./migration" }
sea-orm = { version = "1.1.19", features = ["macros"] }
anyhow = "1.0.100"
strfmt = "0.2.5"

[dependencies.reqwest]
version = "0.12.28"
features = ["stream"]

[dependencies.uuid]
version = "1.19.0"
features = ["v4"]

[dependencies.songbird]
version = "0.5"
features = ["builtin-queue"]
optional = true

[dependencies.symphonia]
version = "0.5"
features = ["aac", "mp3", "isomp4", "alac"] # ...as well as any extras you need!
optional = true
